# localutils-c

./: .gitignore  CMakeLists.txt
src/files/: files.c  files.h
src/json/: jsonparser.c  jsonparser.h  tokenizer.c  tokenizer.h
src/types/: dict.c  dict.h  list.c  list.h
tests/: DictionaryTests.c  FileTests.c  JsonTests.c  ListTests.c  parse-array.json  parse-obj.json  run.c  runtests.c  tests.h
types/: comparers.c  comparers.h  dict.c  dict.h  list.c  types.h
